--- a/src/Backend/MyRecipeBook.Application/MyRecipeBook.Application.csproj
+++ b/src/Backend/MyRecipeBook.Application/MyRecipeBook.Application.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="FluentValidation" Version="11.6.0" />
   </ItemGroup>
 
