--- a/src/Backend/MyRecipeBook.Infrastructure/MyRecipeBook.Infrastructure.csproj
+++ b/src/Backend/MyRecipeBook.Infrastructure/MyRecipeBook.Infrastructure.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\MyRecipeBook.Domain\MyRecipeBook.Domain.csproj" />
   </ItemGroup>
 
