--- a/src/Backend/MyRecipeBook.Application/MyRecipeBook.Application.csproj
+++ b/src/Backend/MyRecipeBook.Application/MyRecipeBook.Application.csproj
@@ -15,6 +15,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="FluentValidation" Version="11.6.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
   </ItemGroup>
 
 </Project>
