--- a/src/Backend/MyRecipeBook.API/appsettings.Development.json
+++ b/src/Backend/MyRecipeBook.API/appsettings.Development.json
@@ -1,8 +1,6 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "DatabaseType": "0",
+  "ConnectionStrings": {
+    "Connection": "Server=localhost;Database=meulivrereceita;Uid=root;Pwd=Mu200101"
   }
 }
