Validação para ver se email ja esta em uso

--- a/src/Backend/MyRecipeBook.API/appsettings.Development.json
+++ b/src/Backend/MyRecipeBook.API/appsettings.Development.json
@@ -2,5 +2,10 @@
   "DatabaseType": "0",
   "ConnectionStrings": {
     "Connection": "Server=localhost;Database=meulivrereceita;Uid=root;Pwd=Mu200101"
+  },
+  "Settings": {
+    "Password": {
+     "AdditionalKey": "wwwwwww" 
+    }
   }
 }
